--- a/src/app/pages/maliyet/kabin-maliyet/kabin-maliyet.component.scss
+++ b/src/app/pages/maliyet/kabin-maliyet/kabin-maliyet.component.scss
@@ -151,7 +151,7 @@
         .p-dropdown .p-dropdown-label {
             background: transparent;
             border: 0 none;
-            padding: 0 2.25rem 0 0.75rem !important;
+            padding: 0 .25rem 0 0.75rem !important;
             font-size: 13px !important;
             background-color: rgb(247, 247, 247) !important;
             border-radius: 0px !important;
