--- a/src/app/pages/maliyet/kasnak-maliyet/kasnak-maliyet.component.html
+++ b/src/app/pages/maliyet/kasnak-maliyet/kasnak-maliyet.component.html
@@ -161,10 +161,14 @@
 
 
 
-<div class="grid grid-cols-[2fr_2fr_4fr] gap-1 ">
+<!-- <div class="grid grid-cols-[2fr_2fr_4fr] gap-1 ">
 
 
     <div class=" p-1 text-white flex flex-col border ">
+        <kasnak-maliyet-form [span]="170" [label]="'Tür'">
+            <p-dropdown form-control [options]="kasnakTuru" [(ngModel)]="frm.kasnakTuru" optionLabel="ad"
+                (ngModelChange)="onKasnakTuruChange(frm.kasnakTuru)" />
+        </kasnak-maliyet-form>
         <kasnak-maliyet-form [span]="170" [label]="'Kasnak Çapı'">
             <p-dropdown form-control [options]="kasnakCapi" [(ngModel)]="frm.kasnakCapi" optionLabel="ad"
                 (ngModelChange)="onKasnakCapiChange(frm.kasnakCapi)" />
@@ -184,15 +188,6 @@
     </div>
 
     <div class=" p-1 text-white flex flex-col border ">
-        <!-- <kasnak-maliyet-form [span]="170" [label]="'Aksesuar Kaplama'">
-            <p-dropdown form-control [options]="aksesuarKaplamalar" [(ngModel)]="frm.aksesuarKaplama" optionLabel="ad"
-                (ngModelChange)="onAksesuarKaplamaChange(frm.aksesuarKaplama)" />
-        </kasnak-maliyet-form>
-        <kasnak-maliyet-form [span]="170" [label]="'Kapasite'">
-            <p-dropdown form-control [options]="kapasiteler" [(ngModel)]="frm.kapasite" optionLabel="deger"
-                (ngModelChange)="onKapasiteChange(frm.kapasite)" />
-        </kasnak-maliyet-form> -->
-
         
 
     </div>
@@ -385,13 +380,432 @@
         </div>
 
     </div>
+</div> -->
+
+
+
+
+<div class="grid grid-cols-[2fr_2fr_4fr] gap-1 ">
+
+
+    <div class=" p-1 text-white flex flex-col border ">
+        <kasnak-maliyet-form [span]="170" [label]="'Tür'">
+            <p-dropdown form-control [options]="kasnakTuru" [(ngModel)]="frm.kasnakTuru" optionLabel="ad"
+                (ngModelChange)="onKasnakTuruChange(frm.kasnakTuru)" />
+        </kasnak-maliyet-form>
+        <kasnak-maliyet-form [span]="170" [label]="'Kasnak Çapı'">
+            <p-dropdown form-control [options]="kasnakCapi" [(ngModel)]="frm.kasnakCapi" optionLabel="ad"
+                (ngModelChange)="onKasnakCapiChange(frm.kasnakCapi)" />
+        </kasnak-maliyet-form>
+        <kasnak-maliyet-form [span]="170" [label]="'Kanal Sayısı'">
+            <p-dropdown form-control [options]="kanalSayisi" [(ngModel)]="frm.kanalSayisi" optionLabel="ad"
+                (ngModelChange)="onKanalSayisiChange(frm.kanalSayisi)" />
+        </kasnak-maliyet-form>
+        <kasnak-maliyet-form [span]="170" [label]="'Halat Sayısı'">
+            <p-dropdown form-control [options]="halatCapi" [(ngModel)]="frm.halatCapi" optionLabel="ad"
+                (ngModelChange)="onHalatCapiChange(frm.halatCapi)" />
+        </kasnak-maliyet-form>
+        <div (click)="urunleriGoster()" form-control class="bg-red-900 flex items-center 
+        justify-center 
+        font-bold hover:bg-red-800 hover:cursor-pointer hover:text-green-700 ">
+        Ürünleri Göster
+    </div>
+
+    </div>
+
+    <div class=" p-1 text-white flex flex-col border ">
+        <table class="yks_table_group ">
+            <tbody>
+                <tr style="height: 25px !important;">
+                    <td class="yks_td_label" style="border-left: #000000; text-align: end; text-align: end;">
+    
+                        <label style=" min-width: 160px; font-weight: 600; font-size: 13px; color: #7a0000;">İşçilik:
+                        </label>
+                    </td>
+                    <td style="width: 100%;">
+    
+                        <label style=" min-width: 60px; 
+                    font-weight: 600; 
+                    font-size: 13px; 
+                    color: #666666;">
+    
+                            <span> 12.250,70 ₺ </span>
+    
+    
+                        </label>
+                    </td>
+    
+                </tr>
+                <tr style="height: 25px !important;">
+                    <td class="yks_td_label" style="border-left: #000000; text-align: end; text-align: end;">
+    
+                        <label style=" min-width: 160px; font-weight: 600; font-size: 13px; color: #7a0000;">Genel
+                            Gider:
+                        </label>
+                    </td>
+                    <td style="width: 100%;">
+    
+                        <label style=" min-width: 60px; 
+                    font-weight: 600; 
+                    font-size: 13px; 
+                    color: #666666;">
+    
+                            <span> 12.250,70 ₺ </span>
+    
+    
+                        </label>
+                    </td>
+    
+                </tr>
+    
+                <tr style="height: 25px !important;">
+                    <td class="yks_td_label" style="border-left: #000000; text-align: end; text-align: end;">
+    
+                        <label style=" min-width: 160px; font-weight: 600; font-size: 13px; color: #7a0000;">
+                            Malzeme :
+                        </label>
+                    </td>
+                    <td style="width: 100%;">
+    
+                        <label style=" min-width: 60px; 
+                    font-weight: 600; 
+                    font-size: 13px; 
+                    color: #666666;">
+    
+                            <span> {{birimMaliyet}}</span>
+    
+    
+                        </label>
+                    </td>
+    
+                </tr>
+                <tr style="height: 25px !important;">
+                    <td class="yks_td_label" style="border-left: #000000; text-align: end; text-align: end;">
+    
+                        <label style=" min-width: 160px; font-weight: 600; font-size: 13px; color: #7a0000;">
+                            Maliyet Tutarı:
+                        </label>
+                    </td>
+                    <td style="width: 100%;">
+    
+                        <label style=" min-width: 60px; 
+                    font-weight: 600; 
+                    font-size: 13px; 
+                    color: #666666;">
+    
+                            <span> {{birimMaliyet}}</span>
+    
+    
+                        </label>
+                    </td>
+    
+                </tr>
+    
+    
+    
+    
+    
+            </tbody>
+        </table>
+       
+    </div>
+    <div class=" p-1 text-white flex flex-col border ">
+        
+
+    </div>
+
+
+       
+    </div>
+
+
+
+        
+        
+   
+
+
+
+<div class="grid grid-cols-[1fr_1fr] gap-3 ">
+    <div>
+      
+        <p-table id="row-check" [value]="bilesenler" [style]="{'min-height':' 700px'}" [scrollable]="true"
+        scrollHeight="700px" selectionMode="single" [(selection)]="selectedBilesenRow">
+        <ng-template pTemplate="header">
+            <tr>
+                <th style="width: 50px;font-size: 13px;" rowspan="3">Sıra No</th>
+                <th style="text-align: center;color: rgb(99, 0, 0);" colspan="6">
+                    Malzeme Giderleri
+                    <div class="button-container" style="position: absolute;right: 0;top: 0;">
+                        <div class="button-grup " style="gap: 3px !important;">
+                            <div class="img-container">
+                                <img style="width: 25px; height: 25px;" src="../../../../../assets/icons/save.png"
+                                    alt="">
+                            </div>
+
+                        </div>
+                        <div class="button-grup " style="gap: 3px !important;">
+                            <div class="img-container">
+                                <img style="width: 25px; height: 25px;"
+                                    src="../../../../../assets/icons/add-file.png" alt="">
+                            </div>
+
+                        </div>
+
+                        <div class="button-grup " style="gap: 3px !important;">
+                            <div class="img-container">
+                                <img style="width: 25px; height: 25px;"
+                                    src="../../../../../assets/icons/delete-file.png" alt="">
+                            </div>
+
+                        </div>
+
+                        <div class="button-grup " style="gap: 3px !important;">
+                            <div class="img-container">
+                                <img style="width: 25px; height: 25px;"
+                                    src="../../../../../assets/icons/edit-file.png" alt="">
+                            </div>
+
+                        </div>
+
+
+
+                        <div class="button-grup " style="gap: 3px !important;">
+                            <div class="img-container">
+                                <img style="width: 25px; height: 25px;"
+                                    src="../../../../../assets/icons/refresh.png" alt="">
+                            </div>
+
+                        </div>
+
+                    </div>
+                </th>
+            </tr>
+            <tr>
+                <th style="font-size: 13px;">Malzeme Adı</th>
+                <th style="font-size: 13px;">a=Miktar</th>
+                <th style="font-size: 13px;">Birim</th>
+                <th style="font-size: 13px;">b=Fiyat(TL)</th>
+                <th style="font-size: 13px;text-align: center;">Döviz</th>
+                <th style="font-size: 13px;">c=axb=Malzeme Tutarı(TL)</th>
+
+            </tr>
+        </ng-template>
+        <ng-template pTemplate="body" let-product let-rowIndex="rowIndex">
+            <tr [pSelectableRow]="product" [pSelectableRowIndex]="rowIndex" [pEditableRow]="product">
+                <td>{{ rowIndex+1 }} </td>
+                <td>{{ product.ad }}</td>
+                <td [pEditableColumn]="product.miktar" pEditableColumnField="miktar">
+                    <p-cellEditor>
+                        <ng-template pTemplate="input">
+                            <input form-control [(ngModel)]="product.miktar" name="miktar"
+                                class="form-control shadow-none form-control-nullable"
+                                id="exampleFormControlInput1">
+                        </ng-template>
+                        <ng-template pTemplate="output">
+                            {{product.miktar }}
+                        </ng-template>
+                    </p-cellEditor>
+                </td>
+                <td>{{ product.birim }}</td>
+                <td>{{ product.birimFiyat }}</td>
+                <td>{{ product.dovizCinsi }}</td>
+                <td>{{ product.dovizFiyat*product.miktar }}</td>
+            </tr>
+        </ng-template>
+        <ng-template pTemplate="footer">
+            <tr>
+                <td colspan="6" class="text-right" style="font-size: 13px;">Toplam</td>
+                <td style="font-size: 13px;">{{malzemeToplam | currency: '₺'}}</td>
+            </tr>
+        </ng-template>
+    </p-table>
+
+    </div>
+    <div>
+
+        <p-table id="row-check" [value]="iscilikGiderler" sortField="gorev.ad" sortMode="single" dataKey="gorev.ad" rowGroupMode="subheader" groupRowsBy="gorev.ad" [tableStyle]="{'min-width': '50rem'}" [style]="{'min-height':' 350px'}" [scrollable]="true"
+        scrollHeight="350px" >
+            <ng-template pTemplate="header">
+                <tr>
+                    <th style="font-size: 13px;">Ad</th>
+                    <th style="font-size: 13px;">a=Miktar</th>
+                    <th style="font-size: 13px;">Birim</th>
+                    <th style="font-size: 13px;">b=Fiyat(TL)</th>
+                    <th style="font-size: 13px;">c=axb=Malzeme Tutarı(TL)</th>
+                </tr>
+            </ng-template>
+            <ng-template pTemplate="groupheader" let-customer let-rowIndex="rowIndex" let-expanded="expanded">
+                <tr>
+                    <td colspan="5">
+                        <button [pRowToggler]="customer" class="p-button-text p-button-rounded p-button-plain mr-2 " style="width: 30px ; height: 30px;">
+                            <!-- <i class="fa-solid fa-caret-up"></i> -->
+                            <i class="fa-solid fa-caret-down"></i>
+                        </button>
+                        <span class="font-bold ml-2">{{customer.gorev.ad}}</span>
+                    </td>
+                </tr>
+            </ng-template>
+            <ng-template pTemplate="groupfooter" let-customer>
+                <tr class="p-rowgroup-footer">
+                    <td colspan="5" style="text-align: right">Total Customers</td>
+                </tr>
+            </ng-template>
+            <ng-template pTemplate="rowexpansion" let-customer >
+                <tr >
+                    <td>
+                        {{customer.ad}}
+                    </td>
+                   
+                    <td>
+                        {{customer.miktar}}
+                    </td>
+                    <td>
+                        {{customer.birim}}
+                    </td>
+                    <td>
+                        {{customer.fiyat}}
+                    </td>
+                    <td>{{ customer.birimFiyat*customer.miktar }}</td>
+                </tr>
+            </ng-template>
+            <ng-template pTemplate="footer">
+                <tr>
+                    <td colspan="4" class="text-right" style="font-size: 13px;">Toplam</td>
+                    <td style="font-size: 13px;">{{0 | currency: 'USD'}}</td>
+                </tr>
+            </ng-template>
+        </p-table>
+
+
+
+        <p-table id="row-check" [value]="genelGiderler" [style]="{'min-height':' 350px'}" dataKey="id" [scrollable]="true"
+            scrollHeight="350px" selectionMode="single" [(selection)]="selectedBilesenRow">
+            <ng-template pTemplate="header">
+                <tr>
+                    <th style="width: 50px;font-size: 13px;" rowspan="3">Sıra No</th>
+                    <th style="text-align: center;color: rgb(99, 0, 0);" colspan="6">İşçilik Giderleri
+                        <div class="button-container" style="position: absolute;right: 0;top: 0;">
+                            <div class="button-grup " style="gap: 3px !important;">
+                                <div class="img-container">
+                                    <img style="width: 25px; height: 25px;" src="../../../../../assets/icons/save.png"
+                                        alt="">
+                                </div>
+
+                            </div>
+                            <div class="button-grup " style="gap: 3px !important;">
+                                <div class="img-container">
+                                    <img style="width: 25px; height: 25px;"
+                                        src="../../../../../assets/icons/add-file.png" alt="">
+                                </div>
+
+                            </div>
+
+                            <div class="button-grup " style="gap: 3px !important;">
+                                <div class="img-container">
+                                    <img style="width: 25px; height: 25px;"
+                                        src="../../../../../assets/icons/delete-file.png" alt="">
+                                </div>
+
+                            </div>
+
+                            <div class="button-grup " style="gap: 3px !important;">
+                                <div class="img-container">
+                                    <img style="width: 25px; height: 25px;"
+                                        src="../../../../../assets/icons/edit-file.png" alt="">
+                                </div>
+
+                            </div>
+
+
+
+                            <div class="button-grup " style="gap: 3px !important;">
+                                <div class="img-container">
+                                    <img style="width: 25px; height: 25px;"
+                                        src="../../../../../assets/icons/refresh.png" alt="">
+                                </div>
+
+                            </div>
+
+
+                        </div>
+                    </th>
+                </tr>
+                <tr>
+                    <th style="font-size: 13px;">Malzeme Adı</th>
+                    <th style="font-size: 13px;">a=Miktar</th>
+                    <th style="font-size: 13px;">Birim</th>
+                    <th style="font-size: 13px;">b=Fiyat(TL)</th>
+                    <th style="font-size: 13px;text-align: center;">Döviz</th>
+                    <th style="font-size: 13px;">c=axb=Malzeme Tutarı(TL)</th>
+                </tr>
+            </ng-template>
+            <ng-template pTemplate="body" let-product let-rowIndex="rowIndex">
+                <tr [pSelectableRow]="product" [pSelectableRowIndex]="rowIndex" [pEditableRow]="product">
+                    <td>{{rowIndex+1}} </td>
+                    <td>{{ product.ad }}</td>
+                    <td [pEditableColumn]="product.miktar" pEditableColumnField="miktar">
+                        <p-cellEditor>
+                            <ng-template pTemplate="input">
+                                <input form-control [(ngModel)]="product.miktar" name="miktar"
+                                    class="form-control shadow-none form-control-nullable"
+                                    id="exampleFormControlInput1">
+                            </ng-template>
+                            <ng-template pTemplate="output">
+                                {{ product.miktar }}
+                            </ng-template>
+                        </p-cellEditor>
+                    </td>
+                    <td>{{ product.birim }}</td>
+                    <td>{{ product.birimFiyat }}</td>
+                    <td>{{ product.dovizCinsi }}</td>
+                    <td>{{ product.birimFiyat*product.miktar }}</td>
+                </tr>
+            </ng-template>
+            <ng-template pTemplate="footer">
+                <tr>
+                    <td colspan="6" class="text-right" style="font-size: 13px;">Toplam</td>
+                    <td style="font-size: 13px;">{{0 | currency: 'USD'}}</td>
+                </tr>
+            </ng-template>
+        </p-table>
+    
+
+    </div>
 </div>
 
 
+<p-dialog header="Header" [(visible)]="visible" [modal]="true" [style]="{ width: '50vw' }">
+    <ng-template pTemplate="header">
+        <span class="text-xl font-bold">ÜRÜNLER</span>
+    </ng-template>
+    <p-table id="row-check" [value]="kabinler" dataKey="id" selectionMode="single" [(selection)]="selectedURUN"
+        [scrollable]="true" scrollHeight="400px" [metaKeySelection]="true">
+        <ng-template pTemplate="header">
+            <tr>
+                <th>Ad</th>
+                <th></th>
 
-<div>
- 
-</div>
+            </tr>
+        </ng-template>
+        <ng-template pTemplate="body" let-urun let-rowIndex="rowIndex">
+            <tr [pSelectableRow]="urun" [pSelectableRowIndex]="rowIndex" [pEditableRow]="urun"
+                (click)="onRowClickUrunler(urun)">
+                <td>{{ urun.ad }}</td>
+                <td>
+                    İşlemler
+                </td>
+            </tr>
+        </ng-template>
+    </p-table>
+
+    <ng-template pTemplate="footer" let-urun>
+
+        <div (click)="Hesapla(selectedURUN)"
+            class="bg-red-900 flex items-center justify-center font-bold hover:bg-red-800 hover:cursor-pointer hover:text-green-700 ">
+            Hesapla</div>
+    </ng-template>
+</p-dialog>
 
 
 
