--- a/src/app/pages/maliyet/kabin-maliyet/kabin-maliyet.component.html
+++ b/src/app/pages/maliyet/kabin-maliyet/kabin-maliyet.component.html
@@ -159,7 +159,7 @@
 
 
 
-<div class="grid grid-cols-[2fr_2fr_4fr] gap-1 ">
+<div class="grid grid-cols-[2fr_2fr_2fr_3fr] gap-1 ">
 
 
     <div class=" p-1 text-white flex flex-col border ">
@@ -200,7 +200,6 @@
         </div>
     </div>
     <div class=" p-1 text-white flex flex-col border ">
-       
         <table class="yks_table_group ">
             <tbody>
                 <tr style="height: 25px !important;">
@@ -259,7 +258,7 @@
                     font-size: 13px; 
                     color: #666666;">
 
-                            <span> {{birimMaliyet}}</span>
+                            <span> {{malzemeToplam}}</span>
 
 
                         </label>
@@ -280,7 +279,101 @@
                     font-size: 13px; 
                     color: #666666;">
 
-                            <span> {{birimMaliyet}}</span>
+                            <span> </span>
+
+
+                        </label>
+                    </td>
+
+                </tr>
+
+
+
+
+
+            </tbody>
+        </table>
+    </div>
+    <div class=" p-1 text-white flex flex-col border ">
+        <table class="yks_table_group ">
+            <tbody>
+                <tr style="height: 25px !important;">
+                    <td class="yks_td_label" style="border-left: #000000; text-align: end; text-align: end;">
+
+                        <label style=" min-width: 160px; font-weight: 600; font-size: 13px; color: #7a0000;">Peşin Fiyat:
+                        </label>
+                    </td>
+                    <td style="width: 100%;">
+
+                        <label style=" min-width: 60px; 
+                    font-weight: 600; 
+                    font-size: 13px; 
+                    color: #666666;">
+
+                            <span> 0 ₺ </span>
+
+
+                        </label>
+                    </td>
+
+                </tr>
+                <tr style="height: 25px !important;">
+                    <td class="yks_td_label" style="border-left: #000000; text-align: end; text-align: end;">
+
+                        <label style=" min-width: 160px; font-weight: 600; font-size: 13px; color: #7a0000;">60 Gün:
+                        </label>
+                    </td>
+                    <td style="width: 100%;">
+
+                        <label style=" min-width: 60px; 
+                    font-weight: 600; 
+                    font-size: 13px; 
+                    color: #666666;">
+
+                            <span> 0 ₺ </span>
+
+
+                        </label>
+                    </td>
+
+                </tr>
+
+                <tr style="height: 25px !important;">
+                    <td class="yks_td_label" style="border-left: #000000; text-align: end; text-align: end;">
+
+                        <label style=" min-width: 160px; font-weight: 600; font-size: 13px; color: #7a0000;">
+                            90 gün :
+                        </label>
+                    </td>
+                    <td style="width: 100%;">
+
+                        <label style=" min-width: 60px; 
+                    font-weight: 600; 
+                    font-size: 13px; 
+                    color: #666666;">
+
+                            <span>  0 ₺</span>
+
+
+                        </label>
+                    </td>
+
+                </tr>
+                <tr style="height: 25px !important;">
+                    <td class="yks_td_label" style="border-left: #000000; text-align: end; text-align: end;">
+
+                        <label style=" min-width: 160px; font-weight: 600; font-size: 13px; color: #7a0000;">
+                            120 Gün:
+                        </label>
+                    </td>
+                    <td style="width: 100%;">
+
+                        <label style=" min-width: 60px; 
+                    font-weight: 600; 
+                    font-size: 13px; 
+                    color: #666666;">
+
+                            <span>  0 ₺</span>
 
 
                         </label>
@@ -364,7 +457,7 @@
             <ng-template pTemplate="body" let-product let-rowIndex="rowIndex">
                 <tr [pSelectableRow]="product" [pSelectableRowIndex]="rowIndex" [pEditableRow]="product">
                     <td>{{ rowIndex+1 }} </td>
-                    <td>{{ product.ad }}</td>
+                    <td>{{ product.stok.ad }}</td>
                     <td [pEditableColumn]="product.miktar" pEditableColumnField="miktar">
                         <p-cellEditor>
                             <ng-template pTemplate="input">
@@ -377,10 +470,10 @@
                             </ng-template>
                         </p-cellEditor>
                     </td>
-                    <td>{{ product.birim }}</td>
-                    <td>{{ product.birimFiyat }}</td>
-                    <td>{{ product.dovizCinsi }}</td>
-                    <td>{{ product.dovizFiyat*product.miktar }}</td>
+                    <td>{{ product.stok.birim }}</td>
+                    <td>{{ product.stok.birimFiyat }}</td>
+                    <td>{{ product.stok.dovizCinsi }}</td>
+                    <td>{{ product.stok.dovizFiyat*product.miktar }}</td>
                 </tr>
             </ng-template>
             <ng-template pTemplate="footer">
@@ -593,7 +686,6 @@
     </div>
 </div>
 
-
 <p-dialog header="Header" [(visible)]="visible" [modal]="true" [style]="{ width: '50vw' }">
     <ng-template pTemplate="header">
         <span class="text-xl font-bold">ÜRÜNLER</span>
@@ -604,7 +696,6 @@
             <tr>
                 <th>Ad</th>
                 <th></th>
-
             </tr>
         </ng-template>
         <ng-template pTemplate="body" let-urun let-rowIndex="rowIndex">
@@ -617,11 +708,11 @@
             </tr>
         </ng-template>
     </p-table>
-
     <ng-template pTemplate="footer" let-urun>
-
         <div (click)="Hesapla(selectedURUN)"
             class="bg-red-900 flex items-center justify-center font-bold hover:bg-red-800 hover:cursor-pointer hover:text-green-700 ">
             Hesapla</div>
     </ng-template>
 </p-dialog>
+
+
