--- a/src/app/pages/maliyet/kapi-maliyet/kapi-maliyet.component.html
+++ b/src/app/pages/maliyet/kapi-maliyet/kapi-maliyet.component.html
@@ -599,7 +599,7 @@
 
 
 
-<div class="grid grid-cols-[2fr_2fr_4fr] gap-1 ">
+<div class="grid grid-cols-[2fr_2fr_2fr_3fr] gap-1 ">
 
 
     <div class=" p-1 text-white flex flex-col border ">
@@ -775,7 +775,7 @@
                     font-size: 13px; 
                     color: #666666;">
     
-                            <span> {{birimMaliyet}}</span>
+                            <span> </span>
     
     
                         </label>
@@ -796,7 +796,7 @@
                     font-size: 13px; 
                     color: #666666;">
     
-                            <span> {{birimMaliyet}}</span>
+                            <span></span>
     
     
                         </label>
@@ -813,7 +813,100 @@
 
     </div>
 
+    <div class=" p-1 text-white flex flex-col border ">
+        <table class="yks_table_group ">
+            <tbody>
+                <tr style="height: 25px !important;">
+                    <td class="yks_td_label" style="border-left: #000000; text-align: end; text-align: end;">
 
+                        <label style=" min-width: 160px; font-weight: 600; font-size: 13px; color: #7a0000;">Peşin Fiyat:
+                        </label>
+                    </td>
+                    <td style="width: 100%;">
+
+                        <label style=" min-width: 60px; 
+                    font-weight: 600; 
+                    font-size: 13px; 
+                    color: #666666;">
+
+                            <span> 0 ₺ </span>
+
+
+                        </label>
+                    </td>
+
+                </tr>
+                <tr style="height: 25px !important;">
+                    <td class="yks_td_label" style="border-left: #000000; text-align: end; text-align: end;">
+
+                        <label style=" min-width: 160px; font-weight: 600; font-size: 13px; color: #7a0000;">60 Gün:
+                        </label>
+                    </td>
+                    <td style="width: 100%;">
+
+                        <label style=" min-width: 60px; 
+                    font-weight: 600; 
+                    font-size: 13px; 
+                    color: #666666;">
+
+                            <span> 0 ₺ </span>
+
+
+                        </label>
+                    </td>
+
+                </tr>
+
+                <tr style="height: 25px !important;">
+                    <td class="yks_td_label" style="border-left: #000000; text-align: end; text-align: end;">
+
+                        <label style=" min-width: 160px; font-weight: 600; font-size: 13px; color: #7a0000;">
+                            90 gün :
+                        </label>
+                    </td>
+                    <td style="width: 100%;">
+
+                        <label style=" min-width: 60px; 
+                    font-weight: 600; 
+                    font-size: 13px; 
+                    color: #666666;">
+
+                            <span>  0 ₺</span>
+
+
+                        </label>
+                    </td>
+
+                </tr>
+                <tr style="height: 25px !important;">
+                    <td class="yks_td_label" style="border-left: #000000; text-align: end; text-align: end;">
+
+                        <label style=" min-width: 160px; font-weight: 600; font-size: 13px; color: #7a0000;">
+                            120 Gün:
+                        </label>
+                    </td>
+                    <td style="width: 100%;">
+
+                        <label style=" min-width: 60px; 
+                    font-weight: 600; 
+                    font-size: 13px; 
+                    color: #666666;">
+
+                            <span>  0 ₺</span>
+
+
+                        </label>
+                    </td>
+
+                </tr>
+
+
+
+
+
+            </tbody>
+        </table>
+    </div>
        
     </div>
 
@@ -903,7 +996,7 @@
         let-rowIndex="rowIndex"
         let-rowgroup="rowgroup"
         let-rowspan="rowspan">
-            <tr>
+            <tr [pSelectableRow]="customer" [pSelectableRowIndex]="rowIndex" [pEditableRow]="customer">
                 
                 <td *ngIf="rowgroup" [attr.rowspan]="rowspan">
                     <div class="flex items-center gap-2">
