--- a/src/app/pages/maliyet/suspansiyon-maliyet/suspansiyon-maliyet.component.html
+++ b/src/app/pages/maliyet/suspansiyon-maliyet/suspansiyon-maliyet.component.html
@@ -392,7 +392,7 @@
                     font-size: 13px; 
                     color: #666666;">
 
-                            <span> {{birimMaliyet}}</span>
+                            <span> </span>
 
 
                         </label>
@@ -409,8 +409,94 @@
         
     </div>
     <div class=" p-1 text-white flex flex-col border ">
-        
-        
+        <table class="yks_table_group ">
+            <tbody>
+                <tr style="height: 25px !important;">
+                    <td class="yks_td_label" style="border-left: #000000; text-align: end; text-align: end;">
+
+                        <label style=" min-width: 160px; font-weight: 600; font-size: 13px; color: #7a0000;">Peşin Fiyat:
+                        </label>
+                    </td>
+                    <td style="width: 100%;">
+
+                        <label style=" min-width: 60px; 
+                    font-weight: 600; 
+                    font-size: 13px; 
+                    color: #666666;">
+
+                            <span> 0 ₺ </span>
+
+
+                        </label>
+                    </td>
+
+                </tr>
+                <tr style="height: 25px !important;">
+                    <td class="yks_td_label" style="border-left: #000000; text-align: end; text-align: end;">
+
+                        <label style=" min-width: 160px; font-weight: 600; font-size: 13px; color: #7a0000;">60 Gün:
+                        </label>
+                    </td>
+                    <td style="width: 100%;">
+
+                        <label style=" min-width: 60px; 
+                    font-weight: 600; 
+                    font-size: 13px; 
+                    color: #666666;">
+
+                            <span> 0 ₺ </span>
+
+
+                        </label>
+                    </td>
+
+                </tr>
+
+                <tr style="height: 25px !important;">
+                    <td class="yks_td_label" style="border-left: #000000; text-align: end; text-align: end;">
+
+                        <label style=" min-width: 160px; font-weight: 600; font-size: 13px; color: #7a0000;">
+                            90 gün :
+                        </label>
+                    </td>
+                    <td style="width: 100%;">
+
+                        <label style=" min-width: 60px; 
+                    font-weight: 600; 
+                    font-size: 13px; 
+                    color: #666666;">
+
+                            <span>  0 ₺</span>
+
+
+                        </label>
+                    </td>
+
+                </tr>
+                <tr style="height: 25px !important;">
+                    <td class="yks_td_label" style="border-left: #000000; text-align: end; text-align: end;">
+
+                        <label style=" min-width: 160px; font-weight: 600; font-size: 13px; color: #7a0000;">
+                            120 Gün:
+                        </label>
+                    </td>
+                    <td style="width: 100%;">
+
+                        <label style=" min-width: 60px; 
+                    font-weight: 600; 
+                    font-size: 13px; 
+                    color: #666666;">
+
+                            <span>  0 ₺</span>
+
+
+                        </label>
+                    </td>
+
+                </tr>
+
+            </tbody>
+        </table>
     </div>
 </div>
 
